--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase": "^8.6.2",
+    "node-cron": "^3.0.0",
     "nodemon": "^2.0.7",
     "puppeteer": "^10.0.0",
     "telegraf": "^4.3.0"
